--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "daisyui": "^4.0.9",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "postcss-import": "^15.1.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.5",
