--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/node": "^20.8.10",
     "daisyui": "^4.0.9",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.3.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.5",
